--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 
 <html lang="en" ng-app="myApp">
-<head>
-  <meta charset="utf-8">
-  <title>Dziennik</title>
-  <script src="js/angular.js"></script>
-  <script src="js/mainController.js"></script>
-  <script src="js/ngStorage.js"></script>
-</head>
-<body ng-controller="mainController">
-<form>
-  Imię:       <input type="text" ng-model="name"></input>
-  Naziwsko:   <input type="text" ng-model="surname"></input>
-  Wiek:       <input type="text" ng-model="age"></input>
-</form>
-<button ng-click="postPerson(name, surname, age)">Dodaj osobę</button>
-</br>
-<p>filtry</p>
-<input type="text" ng-model="nameQuery"></input>
-<p>sortowanie</p>
+    <head>
+        <meta charset="utf-8">
+        <title>Dziennik</title>
+        <script src="js/angular.js"></script>
+        <script src="js/mainController.js"></script>
+        <script src="js/ngStorage.js"></script>
+    </head>
+    <body ng-controller="mainController">
+        <form>
+            <p>Imię:       <input type="text" ng-model="name"></input></p>
+            <p>Naziwsko:   <input type="text" ng-model="surname"></input></p>
+            <p>Wiek:       <input type="text" ng-model="age"></input></p>
+        </form>
 
+        <button ng-click="postPerson(name, surname, age)">Dodaj osobę</button>
+        </br>
+        <p>Wyszukiwanie: <input type="text" ng-model="nameQuery"></input> </p>
 
-<ul>
-<li ng-repeat="person in people  | filter : nameQuery">{{person.name + " " + person.surName+ " " + person.age}}   
-  <button ng-click="deletePerson($index)">Usuń</button> 
-</li>
-</ul>
+        <form>
+	         <input type="radio" ng-model="order" value="name">Imię</input>
+	         <input type="radio" ng-model="order" value="surname">Nazwisko</input>
+	         <input type="radio" ng-model="order" value="age">wiek</input>
+        </form>
 
+        <ul>
+	         <li ng-repeat="person in people  | filter : nameQuery | orderBy : order ">{{person.name + " " + person.surname+ " " + person.age}}   
+  		          <button ng-click="deletePerson($index)">Usuń</button> 
+	         </li>
+        </ul>
 
-  
-  
-  
- 
 </body>
 </html>
