--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <script src="js/angular.js"></script>
         <script src="js/mainController.js"></script>
         <script src="js/ngStorage.js"></script>
-
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -49,7 +48,7 @@
             <ul class="list-group">
               <li class="list-group-item">Sortowanie według {{translateSort(order)}}</li>
 	             <li class="list-group-item" ng-repeat="person in people  | filter : query | orderBy : order ">{{person.name + " " + person.surname+ " " + person.age}}   
-  		          <button class="btn btn-default" aria-label="Left Align" ng-click="deletePerson($index)">Usuń</button> 
+  		          <button class="btn btn-default" aria-label="Left Align" ng-click="deletePerson(person)">Usuń</button> 
 	             </li>
             </ul>
         </div>
