fix undefined localstorage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
 
             <div>
-                <button class="btn btn-default" ng-disabled="name === undefined || surname === undefined || name ==='' || surname ===''" aria-label="Left Align" ng-click="postPerson(name, surname, age)">Dodaj osobę</button>
+                <button class="btn btn-default" ng-disabled="name === undefined || surname === undefined || name ==='' || surname ==='' || age === undefined || age === null" aria-label="Left Align" ng-click="postPerson(name, surname, age)">Dodaj osobę</button>
 
             </div>
             <br/>
