--- a/index.html
+++ b/index.html
@@ -14,45 +14,43 @@
         <div>
             <div>
                 <div class="input-group input-group-sm">
-                    <input type="text" class="form-control" placeholder="Imię" aria-describedby="sizing-addon3" ng-model="name">
-                    <input type="text" class="form-control" placeholder="Nazwisko" aria-describedby="sizing-addon3" ng-model="surname">
-                    <input type="number" class="form-control" placeholder="Wiek" aria-describedby="sizing-addon3" ng-model="age">
+                    <input type="text" class="form-control" placeholder="Name" aria-describedby="sizing-addon3" ng-model="name">
+                    <input type="text" class="form-control" placeholder="Surname" aria-describedby="sizing-addon3" ng-model="surname">
+                    <input type="number" class="form-control" placeholder="Age" aria-describedby="sizing-addon3" ng-model="age">
                 </div>
             </div>
-
             <div>
-                <button class="btn btn-default" ng-disabled="name === undefined || surname === undefined || name ==='' || surname ==='' || age === undefined || age === null" aria-label="Left Align" ng-click="postPerson(name, surname, age)">Dodaj osobę</button>
-
+                <button class="btn btn-default" ng-disabled="name === undefined || surname === undefined || name ==='' || surname ==='' || age === undefined || age === null" aria-label="Left Align" ng-click="postPerson(name, surname, age)">Add person</button>
             </div>
             <br/>
         </div>
         <div class="input-group input-group-sm">
-            
-            <input type="text" class="form-control" placeholder="Szukaj" aria-describedby="sizing-addon3" ng-model="query"></input> 
+
+            <input type="text" class="form-control" placeholder="Search" aria-describedby="sizing-addon3" ng-model="query"></input>
         </div>
         <br/>
 
         <div class="dropdown">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-            Sortowanie
+            Sort
                   <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                  <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="order='name'">Imię</a></li>
-                  <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="order='surname'">Nazwisko</a></li>
-                  <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="order='age'">Wiek</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="order='name'">Name</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="order='surname'">Surname</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="order='age'">Age</a></li>
             </ul>
         </div>
         <br/>
         <div>
             <ul class="list-group">
-              <li class="list-group-item">Sortowanie według {{translateSort(order)}}</li>
-	             <li class="list-group-item" ng-repeat="person in people  | filter : query | orderBy : order ">{{person.name + " " + person.surname+ " " + person.age}}   
-  		          <button class="btn btn-default" aria-label="Left Align" ng-click="deletePerson(person)">Usuń</button> 
+              <li class="list-group-item">Sort by {{order}}</li>
+	             <li class="list-group-item" ng-repeat="person in people  | filter : query | orderBy : order ">{{person.name + " " + person.surname+ " " + person.age}}
+  		          <button class="btn btn-default" aria-label="Left Align" ng-click="deletePerson(person)">Delete</button>
 	             </li>
             </ul>
         </div>
-     
+
 
       </body>
 </html>
